--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
 canvas {
   display: block;
+  position: relative;
+}
+
+#sketch {
+  min-height: 100vh; /*vertical center*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
