--- a/style.css
+++ b/style.css
@@ -6,12 +6,27 @@ body {
 canvas {
   display: block;
   position: relative;
+  /* border: 2px solid black; */
+  max-width: 600px !important;
+  height: auto !important;
 }
 
 #sketch {
   min-height: 100vh; /*vertical center*/
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   position: relative;
+  flex-direction: column;
+}
+
+.title {
+  font-size: 1.8em;
+  padding: 5vh 0;
+}
+
+@media (max-width: 485px) {
+  canvas {
+    max-width: 95% !important;
+  }
 }
